--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -220,7 +220,7 @@ uploaded and available publicly.
 \section{Semantic versioning (semver)}\label{r:section_semver}
 
 Semantic versioning is a set of rules and requirements dictating how version numbers for packages
-are assigned and incremented. They are based on, but not limited, to currently widely used
+are assigned and incremented. They are based on, but not limited to currently widely used
 practices in both open-source and closed software development. For these rules to work, one has to
 first declare a clear and precise public API, changes of which refer to specific incrementations of
 the package version number. The number is most often denoted as X.Y.Z (Major.Minor.Patch), where:
