--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -142,7 +142,7 @@ names being equivalent and commonly used. Most of the currently publicly availab
 stored in the Rust community's default crate registry, \texttt{crates.io}. The role of the
 registries is to allow users to easily find appropriate crates for their projects, as well as
 publish their own work to be used by others. Each registry contains an index, which itself has
-a searchable list of all the crates available with its registry. Cargo uses the selected registry
+a searchable list of all the crates available within its registry. Cargo uses the selected registry
 and index to download crates and update dependencies.
 
 One can think of cargo as the Rust analogue of Python's pip. But despite their similar roles,
