--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -272,7 +272,7 @@ yanked, one of the main causes remains breaking semver.
 
 An abstract syntax tree represents the abstract syntactic structure of the text (often source code)
 in form of a tree, where every node denotes an occurence of some construct in it. The tree is
-called ''abstract'', because it omits some syntax details, such as parantheses or if statements,
+called ``abstract'', because it omits some syntax details, such as parantheses or if statements,
 and focuses on structural or contextual details.
 
 % In most of the well-established programming languages, semver validation is incredibly difficult
