--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -112,7 +112,7 @@ With its first stable release in 2015, Rust is a relatively new programming lang
 puts a strong emphasis on type-safety, memory-safety, performance and concurrency. Unlike
 other memory-safe languages, Rust does not use reference counting nor a garbage collector.
 Instead it tracks the object lifetime of all the program's references during compilation,
-using its built-in mechanism named ''borrow checker''.
+using its built-in mechanism named ``borrow checker''.
 
 Among many benefits and advantages of using Rust, there are three dominant features. Firstly,
 it provides the user with a great performance, both time- and memory-wise, allowing for
